<resources 
    xmlns:tools="http://schemas.android.com/tools" 
    tools:ignore="MissingTranslation" 
    >
    <string name="app_name">DaisyBook Reader</string>
    <string name="atBegin">At the beginning of %s</string>
    <string name="atEnd">At the end of %s</string>
    <string name="brightness">Brightness</string>
    <string name="change_text_color">Text color</string>
    <string name="change_background_color">Background color</string>
    <string name="change_highlight_color">Highlight color</string>
    <string name="change_number_recent_books">Number of recent books</string>
    <string name="change_number_bookmarks">Number of bookmarks</string>
    <string name="cancel_bookmark">Cancel</string>
    <string name="desc_simple_mode">This mode is designed specifically for blind, low vision, and print disabled user</string>
    <string name="desc_visual_mode">In the graphical mode, all menus are vocalized and include large, graphical elements</string>
    <string name="error_title">DaisyReader - Message</string>
    <string name="error_no_path_found">Not found %s on storage. Please check again</string>
    <string name="error_wrong_format">The daisy book has the wrong format</string>
    <string name="error_wrong_format_audio">The audio files in this DAISY book are not supported by this application</string>
    <string name="error_not_enough_space">There is not enough available storage to download this book</string>
    <string name="error_no_audio_found">We cannot find the audio for the current chapter</string>
    <string name="error_parse_file_ncc">Could not read the master file for this book %s</string>
    <string name="error_connect_internet">Please check your Internet connection again</string>
    <string name="error_cannot_dowload">The download is not successfully, please try it again</string>
    <string name="error_unknown_host">Please check the host name again</string>
    <string name="error_file_not_found">The download file is invalid, please check again</string>
    <string name="error_save_bookmark">We cannot save bookmark at the end of %s</string>
    <string name="help_simple_mode">Explaining how to use this screen. Tap the screen to switch between playback and pause. Double tap to display the table of contents. Slide down and move to the next section. Slide and move to the previous section. Slide to the right and move to the following sentence. Slide to the left and move to the previous sentence.</string>
    <string name="empty_bookmark">Empty</string>
    <string name="fontSize">Font Size: </string>
    <string name="load_bookmark">Load</string>
    <string name="menu_title">Menu</string>
    <string name="message_bookmark">Choosing options</string>
    <string name="message_exit_application">Press the Back button to exit</string>
    <string name="message_downloading_file">Downloading file &#x2026;</string>
    <string name="message_confirm_exit_download">Are you sure you want to exit download?</string>
    <string name="night_mode">Night Mode</string>
    <string name="skippable_structures">Skip skippable structures (page numbers, etc.)</string>
    <string name="next_section">Next section</string>
    <string name="next_sentence">Next sentence</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous_sentence">Previous sentence</string>
    <string name="previous_section">Previous section</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="title_activity_daisy_reader_library">Library</string>
    <string name="title_activity_daisy_ebook_reader">Select which mode of player to use</string>
    <string name="title_activity_daisy_ebook_reader_simple_mode">Simple Mode</string>
    <string name="title_activity_daisy_reader_table_of_contents">Table Of Contents</string>
    <string name="title_activity_daisy_ebook_reader_visual_mode">Visual Mode</string>
    <string name="title_activity_daisy_reader_setting">Settings</string>
    <string name="title_activity_daisy_reader_bookmark">Bookmarks</string>
    <string name="title_activity_daisy_reader_recent_book">Recent Book</string>
    <string name="title_activity_daisy_reader_scan_book">Scan Media</string>
    <string name="test_fontsize">ABCDEF</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="sd_card_not_present">No available storage in the phone</string>
    <string name="space">\u0020</string>
    <string name="scan_books">Scan Books</string>
    <string name="simple_mode">SIMPLE mode</string>
    <string name="save_bookmark">Save</string>
    <string name="search_text">Search Text</string>
    <string name="recent_books">Recent Books</string>
    <string name="visual_mode">VISUAL mode</string>
    <string name="waiting">Waiting &#x2026;</string>
    <string name="web_site_name_daisy_org">The DAISY Consortium</string>
    <string name="web_site_url_daisy_org">http://www.daisy.org/sample-content</string>
    <string name="web_site_name_htctu">The High Tech Center Training Unit</string>
    <string name="web_site_url_htctu">http://www.htctu.net/demos</string>
    <string name="web_site_name_daisy_factory">DAISY Factory</string>
    <string name="web_site_url_daisy_factory">http://www.normanet.ne.jp/services/download/daisy.html</string>
    <string name="web_site_name_onyakunakama">Bunkyo onyaku nakama</string>
    <string name="web_site_url_onyakunakama">http://onyakunakama.com/modules/d3downloads/</string>
    <string name="web_site_name_barifuri">Barrier free trip</string>
    <string name="web_site_url_barifuri">https://www.barifuri.jp/portal/page/daisy.html</string>
    <string name="web_site_name_nhk">NHK</string>
    <string name="web_site_url_nhk">http://www.nhk.or.jp/pr/daisy/</string>
    <string name="web_site_name_iccb">ICCB</string>
    <string name="web_site_url_iccb">http://www.iccb.jp/mmd/sample/</string>
    <string name="download_books">Download Books</string>
    <string name="downloaded_books">Downloaded Books</string>
    <string name="download_sites">Download Sites</string>
    <string name="search">Search</string>
    <string name="open_books">Open Books</string>
    <string name="logo_of_book">Logo Book</string>
    <string name="author">Author:</string>
    <string name="produced_date">Produced Date:</string>
    <string name="publisher">Publisher:</string>
    <string name="submenu_library">Library</string>
    <string name="submenu_table_of_contents">Table Of Contents</string>
    <string name="submenu_search">Search</string>
    <string name="submenu_simple_mode">Simple Mode</string>
    <string name="submenu_bookmarks">Bookmarks</string>
    <string name="submenu_settings">Settings</string>
    <string name="submenu_storage">Storage</string>
    <string name="submenu_about">About</string>
    <string name="submenu_google_play">Show/Review on Google Play</string>
    <string name="submenu_contact">Contact</string>
    <string name="tts_read_aloud_language">Read Aloud Language</string>
    <string name="tts_language_default">Device Default</string>
    <string name="tts_read_aloud_speed">Playback Speed</string>
    <string name="loading_book">Opening book…</string>
    <string name="scan_folder_prompt">Select a folder to scan for DAISY books</string>
    <string name="scan_select_folder">Select Folder</string>
    <string name="scan_change_folder">Change Folder</string>
    <string name="scan_folder_label">Scan Folder</string>
    <string name="scan_folder_not_set">(Not set)</string>
	<string name="copyright" translatable="false">© 2013 DaisyBook Reader. All Rights Reserved.\n© 2014-2026 naofum</string>
    <string name="chattylib_settings_title">ChattyLib</string>
    <string name="chattylib_login_id">Login ID</string>
    <string name="chattylib_login_id_hint">Enter ChattyLib login ID</string>
    <string name="chattylib_password">Password</string>
    <string name="chattylib_password_hint">Enter ChattyLib password</string>
    <string name="chattylib_error_not_readable">This book is not available for reading</string>
    <string name="chattylib_login_check">Check</string>
    <string name="chattylib_login_checking">Checking login…</string>
    <string name="chattylib_login_success">Login succeeded</string>
    <string name="chattylib_login_failure">Login failed</string>
    <string name="message_download_complete">Download complete</string>
    <string name="clear_recent_books">Clear all</string>
    <string name="clear_recent_books_confirm">Clear all recent books and cache?</string>
    <string name="clear_recent_books_done">Recent books and cache cleared</string>
    <string name="ruby_display_mode">Ruby display</string>
    <string name="ruby_mode_ruby">Use ruby (reading)</string>
    <string name="ruby_mode_base">Use base text (kanji)</string>
    <string name="sapie_settings_title">Sapie Library</string>
    <string name="sapie_login_id">Sapie ID</string>
    <string name="sapie_login_id_hint">Enter Sapie ID</string>
    <string name="sapie_password">Password</string>
    <string name="sapie_password_hint">Enter password</string>
    <string name="sapie_login_check">Check</string>
    <string name="sapie_login_checking">Checking login…</string>
    <string name="sapie_login_success">Login succeeded</string>
    <string name="sapie_login_failure">Login failed</string>
    <string name="sapie_search_title">Title</string>
    <string name="sapie_search_author">Author</string>
    <string name="sapie_search_no_result">No results found</string>
    <string name="sapie_books">Sapie Library</string>
    <string name="sapie_menu_back">Back</string>
    <string name="sapie_menu_root">Main menu</string>
    <string name="sapie_net_library">Net reading room</string>
    <string name="sapie_list_new">New arrivals</string>
    <string name="sapie_list_issued">Borrowed</string>
    <string name="sapie_list_expired">Expired</string>
    <string name="sapie_input_submit">Search</string>
    <string name="sapie_borrow">Borrow / Download</string>
    <string name="sapie_return">Return</string>
    <string name="sapie_returned">Returned</string>
    <string name="sapie_return_failure">Failed to return</string>
    <string name="sapie_loading">Loading…</string>
    <string name="sapie_login_required">Please set your Sapie ID and password in Settings</string>
    <string name="sapie_limit_reached">The borrow list is full (max 30). Please return a title first.</string>
    <string name="sapie_no_items">No items</string>
    <string name="experimental_settings_title">Experimental features</string>
    <string name="send_log">Send log</string>
    <string name="send_log_no_log">No log available</string>
    <string name="send_log_subject">DaisyReader log</string>
    <string name="submenu_privacy_policy">Privacy Policy</string>
    <string name="submenu_license">License</string>
    <string name="privacy_policy_text">This application (DaisyBook Reader) handles user information according to the following policy.\n\n1. Information collected\nIn principle, this application does not collect personal information.\nOnly when you use the \u201cSend log\u201d feature, device information (model, OS version), app version, and error logs are sent to the developer\u0027s email address for troubleshooting.\n\n2. Handling of credentials\nSapie Library and ChattyLib IDs and passwords are stored only on the device in encrypted form and are never sent externally.\n\n3. Third-party provision\nCollected information is not provided to third parties.\n\n4. Contact\nFor inquiries regarding this policy, please contact naofum@gmail.com.</string>
</resources>