<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progress_bar_scan"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_folder_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_folder_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_folder_prompt"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/button_select_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_select_folder" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_text_view"
        android:hint="@string/search"
        android:drawableLeft="@raw/ic_search_20x20"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/black"
        android:singleLine="true" >
    </EditText>

    <ListView
        android:id="@+id/list_view_scan_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >
    </ListView>

</LinearLayout>